# Bayesian-Spaced-Repetition

./: README.md  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: app.py  config.py  requirements-local.txt  requirements.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/add/: page.tsx
frontend/app/components/: AddCards.tsx  MasteryGrid.tsx  Navbar.tsx  ViewCard.tsx
frontend/app/lib/: api.ts
frontend/app/progress/: page.tsx
